<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.setting.LicenseActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/source_1"
                android:textColor="#000000"
                android:textSize="20dp"
                android:layout_margin="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_1"
                android:textColor="#000000"
                android:textSize="13dp"
                android:layout_margin="10dp"
                android:lineSpacingExtra="5dp"
                android:lineSpacingMultiplier="1.1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/source_2"
                android:textColor="#000000"
                android:textSize="20dp"
                android:layout_margin="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/license_2"
                android:textColor="#000000"
                android:textSize="13dp"
                android:layout_margin="10dp"
                android:lineSpacingExtra="5dp"
                android:lineSpacingMultiplier="1.1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/source_3"
                android:textColor="#000000"
                android:textSize="20dp"
                android:layout_margin="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/license_3"
                android:textColor="#000000"
                android:textSize="13dp"
                android:layout_margin="10dp"
                android:lineSpacingExtra="5dp"
                android:lineSpacingMultiplier="1.1"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>